--- a/package.json
+++ b/package.json
@@ -12,12 +12,22 @@
   },
   "dependencies": {
     "@neondatabase/serverless": "^0.9.4",
+    "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@tanstack/react-table": "^8.19.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "drizzle-orm": "^0.32.1",
+    "lucide-react": "^0.418.0",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
     "postgres": "^3.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "tailwind-merge": "^2.4.0",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
